--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js" 
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +17,14 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.21.0",
     "mongoose": "^8.18.2",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
     "stripe": "^18.5.0",
     "validator": "^13.15.15"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
