--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "fabnest-monolith": "file:..",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
